--- a/socket-io-monitor.html
+++ b/socket-io-monitor.html
@@ -4,7 +4,7 @@
 <link rel="import" href="bower_components/iron-flex-layout/iron-flex-layout.html">
 
 <dom-module id="socket-io-monitor">
-	<script src="/socket.io/socket.io.js"></script>
+	<script src="bower_components/socket.io-client/dist/socket.io.min.js"></script>
 
 	<template>
 		<style>
