--- a/socket-io-monitor.html
+++ b/socket-io-monitor.html
@@ -1,10 +1,10 @@
 <!doctype html>
 
-<link rel="import" href="bower_components/polymer/polymer.html">
-<link rel="import" href="bower_components/iron-flex-layout/iron-flex-layout.html">
+<link rel="import" href="../polymer/polymer.html">
+<link rel="import" href="../iron-flex-layout/iron-flex-layout.html">
 
 <dom-module id="socket-io-monitor">
-	<script src="bower_components/socket.io-client/dist/socket.io.min.js"></script>
+	<script src="../socket.io-client/dist/socket.io.min.js"></script>
 
 	<template>
 		<style>
